--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>be.doeraene</groupId>
-  <artifactId>teavm-long-bench</artifactId>
+  <artifactId>teavm-long-micro-bench</artifactId>
   <version>0.1-SNAPSHOT</version>
   <packaging>war</packaging>
 
