--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
   <properties>
     <java.version>1.8</java.version>
-    <teavm.version>0.4.3</teavm.version>
+    <teavm.version>0.5.1</teavm.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
@@ -96,6 +96,9 @@
               <!-- Whether TeaVM should also put source files into output directory,
                    for compatibility with source maps -->
               <sourceFilesCopied>true</sourceFilesCopied>
+
+              <!-- Optimization level. Valid values are: SIMPLE, ADVANCED, FULL -->
+              <optimizationLevel>ADVANCED</optimizationLevel>
             </configuration>
           </execution>
         </executions>
